Refactored class names, adjusted code structure, updated text in config