@@ -1,12 +1,11 @@
 package com.eternalcode.lobby.feature.itemjoin;
 
-import com.google.common.collect.ImmutableMap;
+import com.eternalcode.lobby.configuration.ReloadableConfig;
 import net.dzikoysk.cdn.entity.Contextual;
 import net.dzikoysk.cdn.entity.Description;
 import net.dzikoysk.cdn.source.Resource;
 import net.dzikoysk.cdn.source.Source;
 import org.bukkit.Material;
-import com.eternalcode.lobby.configuration.ReloadableConfig;
 
 import java.io.File;
 import java.util.ArrayList;
@@ -32,7 +31,7 @@ public class ItemJoinConfiguration implements ReloadableConfig {
 
     @Contextual
     public static class Settings {
-        public Map<Integer, ItemJoin> slots = ImmutableMap.of(
+        public Map<Integer, ItemJoin> slots = Map.of(
             1, new ItemJoin("<gray>Wybór trybu <dark_gray>(Kliknij prawym)", 0, Material.COMPASS, new ArrayList<>(), "", ItemAction.OPEN_SERVER_SELECTOR, "none"),
             2, new ItemJoin("<gray>Wybór Lobby <dark_gray>(Kliknij prawym)", 8, Material.NETHER_STAR, new ArrayList<>(), "", ItemAction.OPEN_LOBBY_SWITCHER, "none"));
     }
